--- a/include/natuive-typography.scss
+++ b/include/natuive-typography.scss
@@ -26,7 +26,8 @@ h1, h2, h3, .full-window-wrap .close {
 
 h1, h2, h3, h4, h5, h6 {
 	
-	margin: $line-height/2*1rem 0;
+	margin: 0;
+	padding: $line-height/2*1rem 0; // Because margin breaks siblings' baseline alignment
 	word-break: break-word; // Overflow protection for long words
 	word-wrap: break-word;
 	font-weight: 500;
@@ -43,6 +44,8 @@ h1 {
 	
 	font-size: 2em;
 	line-height: 1;
+// 	padding: $line-height/4*1rem 0; // (line-height*2 - font-size*2)/2 0
+	padding: ($line-height-em*2 - 2em)/4 0; // (line-height*2 - font-size*2)/2 0
 
 }
 
@@ -75,6 +78,7 @@ h5 {
 	font-size: .8em;
 	line-height: $line-height/.8/2;
 // 	line-height: calc(var(--line-height)/.8);
+	padding: $line-height-em/.8/4 0;
 
 }
 
@@ -83,6 +87,7 @@ h6 {
 	font-size: .6667em;
 	line-height: $line-height/.6667/2;
 // 	line-height: calc(var(--line-height)/.6667em);
+	padding: $line-height-em/.6667/4 0;
 
 }
 
